--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Sign Up</h1>
-    <form action="/users/create" method="post">
+    <form action="/users/create" method="POST">
         <input type="text" name="name" placeholder="Your name" required>
         <input type="email" name="email" placeholder="Your email" required>
         <input type="password" name="password" placeholder="Your password" required>
