--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,12 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%= title %>
-    </title>
-</head>
-<body>
-    <%- include('_header'); %> -->
-    <h1>Codeial</h1>
-    <!-- <%- include('_footer'); %>
-</body>
-</html> -->
+
+    <h1>Codeial / <%= title %></h1>
+
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <form action="" method="post">
+            <textarea name="context" cols="30" ros="3" placeholder="Type area..."></textarea>
+            <input type="Submit" value="Post">
+        </form>
+        
+    </section>
+
