--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
     <section id="feed-posts">
         <h4>Posts</h4>
-        <form action="" method="post">
+        <form action="" id="new-post-form" method="post">
             <textarea name="context" cols="30" ros="3" placeholder="Type area..."></textarea>
             <input type="Submit" value="Post">
         </form>
