--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,8 @@
 
     <section id="feed-posts">
         <h4>Posts</h4>
-        <form action="" id="new-post-form" method="post">
-            <textarea name="context" cols="30" ros="3" placeholder="Type area..."></textarea>
+        <form action="/posts/create" id="new-post-form" method="POST">
+            <textarea name="content" cols="30" ros="3" placeholder="Type area..."></textarea>
             <input type="Submit" value="Post">
         </form>
         
