--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,10 +3,12 @@
 
     <section id="feed-posts">
         <h4>Posts</h4>
+        <% if(locals.user){ %>
         <form action="/posts/create" id="new-post-form" method="POST">
             <textarea name="content" cols="30" ros="3" placeholder="Type area..."></textarea>
             <input type="Submit" value="Post">
         </form>
+        <% } %>
         <div id="posts-list-container">
             <ul>
                 <% for(post of posts) { %>
