--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
         <h4>Posts</h4>
         <% if(locals.user){ %>
         <form action="/posts/create" id="new-post-form" method="POST">
-            <textarea name="content" cols="30" ros="3" placeholder="Type area..."></textarea>
+            <textarea name="content" cols="30" ros="3" placeholder="Type Here..." required></textarea>
             <input type="Submit" value="Post">
         </form>
         <% } %>
@@ -25,7 +25,29 @@
                                 
                             </small>
                         </p>
-                        
+                        <div class="post-comments">
+                            <% if(locals.user) {%>
+                               <form action="/comments/create" method="POST">
+                                <input type="text" name="content" placeholder="Type here to add comment" required>
+                                <input type="hidden" name="post" value="<%= post._id %>">
+                                <input type="submit" value="Add comment">
+                               </form>
+                            <% } %>
+                           <div class="post-comments-list">
+                            <ul id="post-comments-<%= post._id %>">
+                                <% for (comment of post.comments) {%>
+                                  <p>
+                                    <%= comment.content %>
+                                    <br>
+                                    <small>
+                                        <%= comment.user.name %>
+                                    </small>
+                                  </p>
+                                <%} %>
+                            </ul>
+                           </div>
+
+                        </div>
                      </li>
                     
                     <% } %>
