--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,12 @@
                 <% for(post of posts) { %>
                      <li>
                         <p>
+                            <% if (locals.user && locals.user.id && post.user && locals.user.id == post.user.id) { %>
+                             
+                            <small>
+                                <a href="/posts/destroy/<%= post._id %>">X</a>
+                            </small>
+                            <% } %>
                             <%= post.content %>
                             <br>
                             <small>
@@ -35,15 +41,21 @@
                             <% } %>
                            <div class="post-comments-list">
                             <ul id="post-comments-<%= post._id %>">
-                                <% for (comment of post.comments) {%>
+                                <% for (comment of post.comments) { %>
                                   <p>
+                                    <% if (locals.user && locals.user.id && comment.user && locals.user.id == comment.user.id) { %>
+                             
+                                    <small>
+                                        <a href="/comments/destroy/<%= comment._id %>">X</a>
+                                    </small>
+                                    <% } %>
                                     <%= comment.content %>
                                     <br>
                                     <small>
                                         <%= comment.user.name %>
                                     </small>
                                   </p>
-                                <%} %>
+                                <% } %>
                             </ul>
                            </div>
 
@@ -54,4 +66,3 @@
             </ul>
         </div>
     </section>
-
