--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
-
+<link rel="stylesheet" href="/css/home.css">
     <h1><%= title %></h1>
-
+<div id="home-container">
     <section id="feed-posts">
         <h4>Posts</h4>
         <% if(locals.user){ %>
@@ -28,3 +28,5 @@
            </p>
         <% } %>
     </section>
+</div>
+  
