--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     #layout-main{
-        height: 100vh;
+        height: 100%;
         // background-color: aqua;
     }
 }
