--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -10,6 +10,6 @@
         width:30%;
         padding:10px; 
         border: 1px solid lightgray;
-        height:100%;
+        height:200vh;
     }
 }
