--- a/views/_comments.ejs
+++ b/views/_comments.ejs
@@ -1,9 +1,10 @@
-<li>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<li id="comment-<%= comment._id %>">
     <p>
       <% if (locals.user && locals.user.id && comment.user && comment.user.id && locals.user.id == comment.user.id) { %>
 
       <small>
-          <a href="/comments/destroy/<%= comment._id %>">X</a>
+          <a class="delete-comment-button" id="delete-button" href="/comments/destroy/<%= comment.id %>"><i class="fa-solid fa-square-xmark"></i></a>
       </small>
       <% } %>
       <%= comment.content %>
