--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -3,23 +3,23 @@
         <% if (locals.user && locals.user.id && post.user && locals.user.id == post.user.id) { %>
          
         <small>
-            <a class="delete-post-button" href="/posts/destroy/<%= post._id %>">X</a>
+            <a class="delete-post-button" id="delete-button" href="/posts/destroy/<%= post.id %>">X</a>
         </small>
         <% } %>
         <%= post.content %>
         <br>
         <small>
-            <!-- <% if(post.user) { %> -->
-            Posted by:<%= post.user.name %>
-            <!-- <% } else { %>
-            User not available
-        <% } %> -->
-            
+            <% if (post && post.user) { %>
+                Posted by: <%= post.user.name %>
+            <% } else { %>
+                <!-- Handle the case where post or post.user is undefined or null -->
+                Posted by: Unknown User
+            <% } %>
         </small>
     </p>
     <div class="post-comments">
         <% if(locals.user) {%>
-           <form action="/comments/create" method="POST">
+           <form id="post-<%= post._id %>-comments-form" action="/comments/create" method="POST">
             <input type="text" name="content" placeholder="Type here to add comment" required>
             <input type="hidden" name="post" value="<%= post._id %>">
             <input type="submit" value="Add comment">
@@ -28,7 +28,7 @@
        <div class="post-comments-list">
         <ul id="post-comments-<%= post._id %>">
             <% for (comment of post.comments) { %>
-               <%- include('_comments', {comment:comment})-%>
+               <%- include('_comments')-%>
             <% } %>
         </ul>
        </div>
